add to-do about presentation of spectral sequences

--- a/main.tex
+++ b/main.tex
@@ -71,6 +71,8 @@
 
 \todo[inline]{Use Hood's HFp macro where appropriate.  (Maybe modify it also to do HF2 appropriately.)}
 
+\todo[inline]{Encourage spectral sequence figures to occur on facing pages.}
+
 
 
 
