change the notation of the algebraic hopf ring

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -298,7 +298,7 @@ There are natural maps of Hopf rings \[F_*[E^*] \to F_*(\OS{E}{*}) \to F_*[E^*]\
 
 Supposing that $E$ and $F$ are complex-orientable, we now seek to involve their formal groups.  The construction we are about to undertake is a variation on the proof of \Cref{ConstructionTangentAffineScheme}, which is itself a variation of a more general result in the theory of formal schemes:
 \begin{lemma}[{\cite[Proposition 2.94]{StricklandFSFG}}]
-Let $X$ and $Y$ be schemes over $S = \Spec R$, such that $\sheaf O_X$ forms a finite and free $R$--module.  There is then a mapping scheme $M$, such that points $f \in M(A)$ naturally biject with maps $f\co X \times_S \Spec A \to Y \times_S \Spec A$. \qed
+Let $X$ and $Y$ be schemes over $S = \Spec R$, such that $\sheaf O_X$ forms a finite and free $R$--module.  There is then a mapping scheme $M$, such that points $f \in M(A)$ naturally biject with maps $f\co X \times_S \Spec A \to Y \times_S \Spec A$ of $A$--schemes. \qed
 \end{lemma}
 
 \noindent The mode of proof of this result is to form the symmetric $R$--algebra on the $R$--module $\sheaf O_Y \otimes_R \sheaf O_X^*$, then quotient by the relations encoding multiplicativity of functions.  These are the same steps we will take to form a Hopf ring embodying homomorphisms of formal groups $\CP^\infty_F \to \CP^\infty_E$.
@@ -334,11 +334,11 @@ The main theme of this Case Study is that this induced map off of the quotient i
 
 \begin{definition}
 \todo{This notation is still bad.  So, possibly, is the ``${}^{\circ = \Delta}$'' notation used above.  That one at least suggests that it has something to do with homomorphisms (very vaguely), but this generic name doesn't do that at all.}
-For $F$ and $E$ ring spectra, we define their \textit{algebraic Hopf ring} $A(F, E)$ by \[A(F, E) = (F_* \CP^\infty)_{F_*[E^*]}^{\circ = \Delta}[E^* \CP^\infty].\]
+For $F$ and $E$ ring spectra, we define their \textit{algebraic Hopf ring} $\AA(F, E)$ by \[\AA(F, E) = (F_* \CP^\infty)_{F_*[E^*]}^{\circ = \Delta}[E^* \CP^\infty].\]
 \end{definition}
 
 \begin{lemma}[{\cite[Theorem 3.8]{RavenelWilsonHopfRingForMU}, \cite[Theorem 9.7]{Wilson}}]\label{UnstableRWRelation}
-After choosing complex orientations of $E$ and $F$, there is a natural morphism of Hopf rings \[A(F, E) \cong \frac{F_*[E^*][F_* \CP^\infty]}{\beta(s +_F t) = \beta(s) +_{[E]} \beta(t)},\] where the equation is of power series and the equality is imposed term-by-term on the Hopf ring.  The formal sum $\beta(s)$ is given by $\beta(s) = \sum_j \beta_j x^j$, where $\beta_j$ is dual to the $j${\th} power of the chosen coordinate in $F^* \CP^\infty$, and the formal group law expressions expand to
+After choosing complex orientations of $E$ and $F$, there is a natural morphism of Hopf rings \[\AA(F, E) \cong \frac{F_*[E^*][F_* \CP^\infty]}{\beta(s +_F t) = \beta(s) +_{[E]} \beta(t)},\] where the equation is of power series and the equality is imposed term-by-term on the Hopf ring.  The formal sum $\beta(s)$ is given by $\beta(s) = \sum_j \beta_j x^j$, where $\beta_j$ is dual to the $j${\th} power of the chosen coordinate in $F^* \CP^\infty$, and the formal group law expressions expand to
 \begin{align*}
 \beta(s +_F t) & = \sum_n \beta_n \left(\sum_{i, j} a_{ij}^F s^i t^j \right)^n, \\
 \beta(s) +_{[E]} \beta(t) & = \bigast_{i, j} \left([a_{ij}^E] \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right).
@@ -353,7 +353,7 @@ This is a matter of calculating the behavior of \[\CP^\infty \times \CP^\infty \
 
 Finally, we are able to explain the phenomenon uncovered by computation in \Cref{UnstableContextsSection}, where we passed to the $\ast$--indecomposables to find the classical ring of functions on the endomorphism scheme of $\G_a$.  This arises out of two parallel questions:
 \begin{enumerate}
-	\item What does the Hopf ring $A(F, E)$ corepresent, considered as a functor on Hopf rings?
+	\item What does the Hopf ring $\AA(F, E)$ corepresent, considered as a functor on Hopf rings?
 	\item How does this functor interact with classical rings?
 \end{enumerate}
 
@@ -375,7 +375,7 @@ iR & \xrightarrow{\eps} \Z, & \eps([r]) & = 1, & \eps(1) & = 1, \\
 We have $R \cong Q^* i R$, and moreover there is an adjunction \[\CatOf{Rings}(Q^* S, R) = \CatOf{HopfRings}(S, iR). \qed\]
 \end{lemma}
 
-We are thus algebraically motivated to understand the affine scheme $\Spec Q^* A(F, E)$, as this is what $\CatOf{HopfRings}(A(F, E), -)$ restricts to on the subcategory of classical rings.  Note that the Hopf ring-ring $R[S]$ and the free relative Hopf ring $A_{R[S]}[B]$ both have an augmentation given by $[x] \mapsto 1$, so that the elements $\<x\> = [x] - [0]$ form a generating set of the augmentation ideal.
+We are thus algebraically motivated to understand the affine scheme $\Spec Q^* \AA(F, E)$, as this is what $\CatOf{HopfRings}(\AA(F, E), -)$ restricts to on the subcategory of classical rings.  Note that the Hopf ring-ring $R[S]$ and the free relative Hopf ring $A_{R[S]}[B]$ both have an augmentation given by $[x] \mapsto 1$, so that the elements $\<x\> = [x] - [0]$ form a generating set of the augmentation ideal.
 \begin{lemma}\label{ArithmeticInQAst}
 In the $\ast$--indecomposable quotient, there are the formulas
 \begin{align*}
@@ -392,16 +392,16 @@ There is an isomorphism $Q^* R[S] \cong R \otimes S$. \qed
 \end{corollary}
 
 \begin{corollary}
-For complex-orientable $F$ and $E$, there is a natural isomorphism \[\Spec Q^* A(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
+For complex-orientable $F$ and $E$, there is a natural isomorphism \[\Spec Q^* \AA(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
 \end{corollary}
 \begin{proof}
-This is a matter of calculating $Q^* A(F, E)$, which is possible to do coordinate-freely, but it is at least as clear to pick coordinates.  Doing this and using \Cref{ArithmeticInQAst}, we have \[\bigast_{i, j} \left([a_{ij}^E] \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right) \equiv \sum_{i, j} a_{ij}^E \left( \sum_k \beta_k s^k \right)^i \left( \sum_\ell \beta_\ell t^\ell \right)^j \;\text{(in $Q^*$)},\] from which it follows that \[Q^* A(F, E) = \left. (F_* \otimes E_*)[\beta_0, \beta_1, \beta_2, \ldots] \middle/ \left( \beta(s +_F t) = \beta(s) +_E \beta(t) \right) \right. . \qedhere\]
+This is a matter of calculating $Q^* \AA(F, E)$, which is possible to do coordinate-freely, but it is at least as clear to just give in and pick coordinates.  Doing this and using \Cref{ArithmeticInQAst}, we have \[\bigast_{i, j} \left([a_{ij}^E] \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right) \equiv \sum_{i, j} a_{ij}^E \left( \sum_k \beta_k s^k \right)^i \left( \sum_\ell \beta_\ell t^\ell \right)^j \;\text{(in $Q^*$)},\] from which it follows that \[Q^* \AA(F, E) = \left. (F_* \otimes E_*)[\beta_0, \beta_1, \beta_2, \ldots] \middle/ \left( \beta(s +_F t) = \beta(s) +_E \beta(t) \right) \right. . \qedhere\]
 \end{proof}
 
 \todo[inline]{You could also include the odd part of the approximation, with $e \circ e = \beta_1$, and from that calculate the algebraic model of the stabilization.}
 
 \begin{remark}
-In the unmixed case of $E = F$, as we saw in the computational example in \Cref{UnstableContextsSection}, the algebraic Hopf ring $A(E, E)$ picks up an extra diagonal corresponding to the composition of formal group endomorphisms of $\CP^\infty_E$, and the resulting pair $(\Spec E_*, \underline{\operatorname{End}}(\CP^\infty_E))$ forms a category scheme.  These schemes act by pre- and post-composition on the mixed algebraic Hopf ring $\Spec Q^* A(F, E)$, and these actions are compatible with the structure maps in the unstable context $\Ucontext{E \vee F}$ described at the beginning of this Lecture.  This description is also compatible with passing to the stable context $\context{E \vee F}$: it is exactly the inclusion of the simplicial subobject consisting of the formal group isomorphisms and automorphisms.
+In the unmixed case of $E = F$, as we saw in the computational example in \Cref{UnstableContextsSection}, the algebraic Hopf ring $\AA(E, E)$ picks up an extra diagonal corresponding to the composition of formal group endomorphisms of $\CP^\infty_E$, and the resulting pair $(\Spec E_*, \underline{\operatorname{End}}(\CP^\infty_E))$ forms a category scheme.  These schemes act by pre- and post-composition on the mixed algebraic Hopf ring $\Spec Q^* \AA(F, E)$, and these actions are compatible with the structure maps in the unstable context $\Ucontext{E \vee F}$ described at the beginning of this Lecture.  This description is also compatible with passing to the stable context $\context{E \vee F}$: it is exactly the inclusion of the simplicial subobject consisting of the formal group isomorphisms and automorphisms.
 \end{remark}
 
 \todo{Section III.11 of Wilson's \textit{Primer} has a synopsis of how additive unstable operations should be treated.}
@@ -419,7 +419,7 @@ In the unmixed case of $E = F$, as we saw in the computational example in \Cref{
 
 \section{Mixed and unmixed unstable cooperations in complex bordism}\label{COableCoopnsII}
 
-\todo[inline]{\textbf{\textit{BELOW THIS LINE THERE MAY STILL BE SOME PLACES WHERE $F_*^R \OS{E}{*}$ IS WRITTEN IN PLACE OF $A(F, E)$.  READER BEWARE!}}}
+\todo[inline]{\textbf{\textit{BELOW THIS LINE THERE MAY STILL BE SOME PLACES WHERE $F_*^R \OS{E}{*}$ IS WRITTEN IN PLACE OF $\AA(F, E)$.  READER BEWARE!}}}
 
 \todo{Jeremy found a paper (Chan's \textit{A simple proof that the unstable (co-)homology of the Brown--Peterson spectrum is torsion-free}, see also Wilson's Primer's Section 10) where $H_* \OS{BP}{2*}$ is proven to be bipolynomial (and even!) without any Hopf ring rigamarole. It looks like the method of proof is not very different from the Hopf ring one, but it's much shorter... and maybe the result will fall out of the Dieudonne module calculations anyhow?  Consider it as an option after you break this lecture in two.}
 \todo{Ravenel and Wilson also tell you how to get a basis of $\ast$--indecomposables, which they call ``allowable'' monomials.  Might be worth mentioning.}
