--- a/preamble.tex
+++ b/preamble.tex
@@ -145,7 +145,9 @@
 \newcommand{\st}{\textsuperscript{st}}
 \def\Cech{\v{C}ech}
 
-\newcommand{\bigast}{\mathop{\vcenter{\hbox{$\mathlarger{\mathlarger{\ast}}$}}}}
+% from http://tex.stackexchange.com/questions/41186/big-asterisk-bigast-symbol
+% these are magic numbers that depend upon the other geometry options
+\newcommand{\bigast}{\mathop{\scalebox{2.5}{\raisebox{-0.35ex}{$\ast$}}}}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
