write the words ‘algebraic approximation’ somewhere to justify the notation

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -334,7 +334,7 @@ The main theme of this Case Study is that this induced map off of the quotient i
 
 \begin{definition}
 \todo{This notation is still bad.  So, possibly, is the ``${}^{\circ = \Delta}$'' notation used above.  That one at least suggests that it has something to do with homomorphisms (very vaguely), but this generic name doesn't do that at all.}
-For $F$ and $E$ ring spectra, we define their \textit{algebraic Hopf ring} $\AA(F, E)$ by \[\AA(F, E) = (F_* \CP^\infty)_{F_*[E^*]}^{\circ = \Delta}[E^* \CP^\infty].\]
+For $F$ and $E$ ring spectra, we define their \textit{algebraic Hopf ring} $\AA(F, E)$ (or \textit{algebraic approximation}) by \[\AA(F, E) = (F_* \CP^\infty)_{F_*[E^*]}^{\circ = \Delta}[E^* \CP^\infty].\]
 \end{definition}
 
 \begin{lemma}[{\cite[Theorem 3.8]{RavenelWilsonHopfRingForMU}, \cite[Theorem 9.7]{Wilson}}]\label{UnstableRWRelation}
