todo about the hovey-strickland Stable categories

--- a/finite.tex
+++ b/finite.tex
@@ -268,6 +268,7 @@ If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{
 \citeme{Pridham's article \textit{Presenting higher stacks as simplicial schemes} seems like a good reference?  Maybe some Toen things are appropriate?  I don't really know where this simplicial scheme stuff is written down.}
 \todo{Say what open, closed, flat maps of simplicial schemes are?}
 \todo{Jon thinks that this picture can be instructively recast in terms of the cotangent complex.  I'm not sure how, but it's something to keep in mind for later.}
+\todo{Hovey and Strickland have published a whole bunch of papers about establishing a reasonable (un/bounded) derived category for sheaves on various stacks important to topology, which go by names like $\operatorname{Stable}(BP_* BP)$.  It's probably worth putting in a remark about this here, admitting that the homotopical version of the stuff here isn't totally worked out, but this is the major foothold on it.}
 
 
 
