--- a/preamble.tex
+++ b/preamble.tex
@@ -149,6 +149,9 @@
 % these are magic numbers that depend upon the other geometry options
 \newcommand{\bigast}{\mathop{\scalebox{2.5}{\raisebox{-0.35ex}{$\ast$}}}}
 
+% cf http://tex.stackexchange.com/questions/286050/rotated-math-with-correct-font-size for sizing instructions
+\newcommand{\circulatearrows}{\text{$\curvearrowleft$\hspace{-0.95em}\rotatebox[origin=bl]{180}{$\curvearrowleft$}}}
+
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
 \newcommand{\CatOf}[1]{\mathsf{#1}}
@@ -211,6 +214,7 @@
 \DeclareMathOperator{\Isog}{Isog}
 \DeclareMathOperator{\Td}{Td}
 \DeclareMathOperator{\cofib}{cofib}
+\DeclareMathOperator{\SpH}{SpH}
 \let\div\undefined\DeclareMathOperator{\div}{div}
 
 % theorem environments
