oops, typo preventing compile

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -462,7 +462,7 @@ In the unmixed case of $E = F$, as we saw in the computational example in \Cref{
 \end{remark}
 
 \todo{Section III.11 of Wilson's \textit{Primer} has a synopsis of how additive unstable operations should be treated.}
-\todo{You should talk about how $\AA(F, E)$ only hopes to grab the even information, since the simultaneous even-periodicity and complex-orientability of $F$ and $E$ force everything in $F_* \CP^\infty$ and $E^* \CP^\infty$ to lie in even degree.  \emph{However}, I think there is a variation on this that touches the Morava $K$--theory case, where $\CP^\infty$ is replaced by $\OS{HC_{p^\infty}}{1} and the $\circ$--product is that induced by the Pontryagin pairing.  That degree shift probably fixes some things?}
+\todo{You should talk about how $\AA(F, E)$ only hopes to grab the even information, since the simultaneous even-periodicity and complex-orientability of $F$ and $E$ force everything in $F_* \CP^\infty$ and $E^* \CP^\infty$ to lie in even degree.  \emph{However}, I think there is a variation on this that touches the Morava $K$--theory case, where $\CP^\infty$ is replaced by $\OS{HC_{p^\infty}}{1}$ and the $\circ$--product is that induced by the Pontryagin pairing.  That degree shift probably fixes some things?}
 
 
 
